# Qawale-core

./: .gitignore  AI.cpp  AI.hpp  APlayer.cpp  APlayer.hpp  CMakeLists.txt  Core.pro  EasyAI.cpp  EasyAI.hpp  Game.cpp  Game.hpp  Gameboard.cpp  Gameboard.hpp  HardAI.cpp  HardAI.hpp  Hole.cpp  Hole.hpp  IA.cpp  IA.hpp  Player.cpp  Player.hpp  README.md
inc/: AI.hpp  APlayer.hpp  Game.hpp  HardAI.hpp  Hole.hpp
src/: AI.cpp  APlayer.cpp  EasyAI.cpp  Game.cpp  Gameboard.cpp  Player.cpp
